White space at set date, Create site fixed

--- a/ikt/ikt/Content/Site.css
+++ b/ikt/ikt/Content/Site.css
@@ -33,6 +33,7 @@ textarea {
 .form-control[readonly],
 fieldset[disabled] .form-control {
     cursor: text !important;
+    background-color: #FFFFFF;
 }
 #copyrighter {
     color: #000000;
